chapter2.1/1
serial.java:1: error: package edu.princeton.cs.alsg4 does not exist
import edu.princeton.cs.alsg4.StdIn;
                             ^
serial.java:2: error: package edu.princeton.cs.alsg4 does not exist
import edu.princeton.cs.alsg4.StdOut;
                             ^
serial.java:4: error: cannot find symbol
public class serial<Item> extends LinkedQueue<Item> implements Comparable {
                                  ^
  symbol: class LinkedQueue
serial.java:4: error: serial is not abstract and does not override abstract method compareTo(Object) in Comparable
public class serial<Item> extends LinkedQueue<Item> implements Comparable {
       ^
serial.java:13: error: cannot find symbol
		this.enqueue(item);
		    ^
  symbol: method enqueue(Item)
  where Item is a type-variable:
    Item extends Object declared in class serial
serial.java:23: error: cannot find symbol
		while(!this.isEmpty())
		           ^
  symbol: method isEmpty()
serial.java:24: error: cannot find symbol
			StdOut.print(this.dequeue() + " ");
			                 ^
  symbol: method dequeue()
serial.java:24: error: cannot find symbol
			StdOut.print(this.dequeue() + " ");
			^
  symbol:   variable StdOut
  location: class serial<Item>
  where Item is a type-variable:
    Item extends Object declared in class serial
serial.java:25: error: cannot find symbol
		StdOut.println();
		^
  symbol:   variable StdOut
  location: class serial<Item>
  where Item is a type-variable:
    Item extends Object declared in class serial
serial.java:32: error: cannot find symbol
		String[] item = StdIn.readAllStrings();
		                ^
  symbol:   variable StdIn
  location: class serial<Item>
  where Item is a type-variable:
    Item extends Object declared in class serial
serial.java:34: error: cannot find symbol
		MinPQ<serial> pq = new MinPQ<serial>[pros];
		^
  symbol:   class MinPQ
  location: class serial<Item>
  where Item is a type-variable:
    Item extends Object declared in class serial
serial.java:34: error: cannot find symbol
		MinPQ<serial> pq = new MinPQ<serial>[pros];
		                       ^
  symbol:   class MinPQ
  location: class serial<Item>
  where Item is a type-variable:
    Item extends Object declared in class serial
serial.java:39: error: cannot find symbol
		StdOut.println("start to put in items");
		^
  symbol:   variable StdOut
  location: class serial<Item>
  where Item is a type-variable:
    Item extends Object declared in class serial
serial.java:42: error: method insert in class serial<Item> cannot be applied to given types;
			tmp.insert();
			   ^
  required: Object
  found: no arguments
  reason: actual and formal argument lists differ in length
  where Item is a type-variable:
    Item extends Object declared in class serial
serial.java:46: error: cannot find symbol
			StdOut.println(i);
			^
  symbol:   variable StdOut
  location: class serial<Item>
  where Item is a type-variable:
    Item extends Object declared in class serial
15 errors
